[gd_scene load_steps=18 format=2]

[ext_resource path="res://GameObjects/Tiles/ScannerTile/ScannerTile.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameObjects/Tiles/TempleTile/Temple.tscn" type="PackedScene" id=2]
[ext_resource path="res://Components/Tilesets/Void/Void.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Stages/BossStage/TheEye/Power/TorchSpawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Textures/MagicalBossTemple3.png" type="Texture" id=5]
[ext_resource path="res://Components/Button/Button.tscn" type="PackedScene" id=6]
[ext_resource path="res://GameObjects/Blocks/ValueBlocks/PushableBlocks.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Textures/MagicalBossTemple2.png" type="Texture" id=8]
[ext_resource path="res://Assets/Textures/MagicalBossTemple1.png" type="Texture" id=9]
[ext_resource path="res://GameObjects/Character/Player/Player.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Fonts/Amiko/Amiko-Regular.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Scenes/Stages/BossStage/TheEye/TheEyeSprite/TheEyeSprite.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Stages/BossStage/TheEye/Puzzles/TheEyePuzzles.gd" type="Script" id=14]

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="Shader" id=9]
code = "shader_type canvas_item;

uniform vec4 color: hint_color;
uniform float multiplier = 0.2;
uniform float softness = 3.0;

void fragment() {
	float value = distance(UV, vec2(0.5));
	COLOR = vec4(color.rgb, smoothstep(multiplier, softness, value));
}"

[sub_resource type="ShaderMaterial" id=12]
shader = SubResource( 9 )
shader_param/color = Color( 0.12549, 0.152941, 0.258824, 1 )
shader_param/multiplier = -0.5
shader_param/softness = 6.0

[sub_resource type="DynamicFont" id=11]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 12 )

[node name="1" type="Node"]
script = ExtResource( 14 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 384, 16 )
current = true
zoom = Vector2( 0.7, 0.7 )
__meta__ = {
"_editor_description_": ""
}

[node name="Board" type="Node2D" parent="."]

[node name="VoidTilemap" parent="Board" instance=ExtResource( 3 )]

[node name="TileMap2" parent="Board/VoidTilemap" index="1"]
tile_data = PoolIntArray( 14, 0, 2, 15, 0, 3, 16, 0, 3, 17, 0, 3, 18, 0, 3, 19, 0, 3, 20, 0, 3, 21, 0, 4, 24, 0, 2, 25, 0, 3, 26, 0, 3, 27, 0, 3, 28, 0, 3, 29, 0, 3, 30, 0, 3, 31, 0, 3, 32, 0, 3, 33, 0, 4, 65550, 0, 65538, 65551, 0, 65539, 65552, 0, 65539, 65553, 0, 65539, 65554, 0, 65539, 65555, 0, 65539, 65556, 0, 65539, 65557, 0, 65540, 65560, 0, 65538, 65561, 0, 65539, 65562, 0, 65539, 65563, 0, 65539, 65564, 0, 65539, 65565, 0, 65539, 65566, 0, 65539, 65567, 0, 65539, 65568, 0, 65539, 65569, 0, 65540, 131086, 0, 65538, 131087, 0, 65539, 131088, 0, 65539, 131089, 0, 65539, 131090, 0, 65539, 131091, 0, 65539, 131092, 0, 65539, 131093, 0, 65540, 131096, 0, 65538, 131097, 0, 65539, 131098, 0, 65539, 131099, 0, 65539, 131100, 0, 65539, 131101, 0, 65539, 131102, 0, 65539, 131103, 0, 65539, 131104, 0, 65539, 131105, 0, 65540, 196622, 0, 65538, 196623, 0, 65539, 196624, 0, 65539, 196625, 0, 65539, 196626, 0, 65539, 196627, 0, 65539, 196628, 0, 65539, 196629, 0, 65540, 196632, 0, 65538, 196633, 0, 65539, 196634, 0, 65539, 196635, 0, 65539, 196636, 0, 65539, 196637, 0, 65539, 196638, 0, 65539, 196639, 0, 65539, 196640, 0, 65539, 196641, 0, 65540, 262158, 0, 65538, 262159, 0, 65539, 262160, 0, 65539, 262161, 0, 65539, 262162, 0, 65539, 262163, 0, 65539, 262164, 0, 65539, 262165, 0, 65540, 262168, 0, 65538, 262169, 0, 65539, 262170, 0, 65539, 262171, 0, 65539, 262172, 0, 65539, 262173, 0, 65539, 262174, 0, 65539, 262175, 0, 65539, 262176, 0, 65539, 262177, 0, 65540, 327694, 0, 65538, 327695, 0, 65539, 327696, 0, 65539, 327697, 0, 65539, 327698, 0, 65539, 327699, 0, 65539, 327700, 0, 65539, 327701, 0, 65540, 327704, 0, 65538, 327705, 0, 65539, 327706, 0, 65539, 327707, 0, 65539, 327708, 0, 65539, 327709, 0, 65539, 327710, 0, 65539, 327711, 0, 65539, 327712, 0, 65539, 327713, 0, 65540, 393230, 0, 65538, 393231, 0, 65539, 393232, 0, 65539, 393233, 0, 65539, 393234, 0, 65539, 393235, 0, 65539, 393236, 0, 65539, 393237, 0, 65540, 393240, 0, 65538, 393241, 0, 65539, 393242, 0, 65539, 393243, 0, 65539, 393244, 0, 65539, 393245, 0, 65539, 393246, 0, 65539, 393247, 0, 65539, 393248, 0, 65539, 393249, 0, 65540, 458766, 0, 131074, 458767, 0, 131075, 458768, 0, 131075, 458769, 0, 131075, 458770, 0, 131075, 458771, 0, 131075, 458772, 0, 131075, 458773, 0, 131076, 458776, 0, 131074, 458777, 0, 131075, 458778, 0, 131075, 458779, 0, 131075, 458780, 0, 131075, 458781, 0, 131075, 458782, 0, 131075, 458783, 0, 131075, 458784, 0, 131075, 458785, 0, 131076 )

[node name="Blocks" parent="Board/VoidTilemap" index="2"]
tile_data = PoolIntArray( 65562, 0, 0, 65563, 0, 0, 65564, 0, 0, 65565, 0, 0, 65566, 0, 0, 65567, 0, 0, 131097, 0, 0, 131104, 0, 0, 196633, 0, 0, 196640, 0, 0, 262169, 0, 0, 262176, 0, 0, 327705, 0, 0, 327712, 0, 0, 393242, 0, 0, 393243, 0, 0, 393244, 0, 0, 393245, 0, 0, 393246, 0, 0, 393247, 0, 0 )

[node name="Box3" parent="Board" instance=ExtResource( 7 )]
position = Vector2( 488, 72 )
boxValue = 5

[node name="Box5" parent="Board" instance=ExtResource( 7 )]
position = Vector2( 456, 72 )

[node name="Box6" parent="Board" instance=ExtResource( 7 )]
position = Vector2( 456, 56 )

[node name="Box7" parent="Board" instance=ExtResource( 7 )]
position = Vector2( 472, 56 )

[node name="ScannerTile3" parent="Board" instance=ExtResource( 1 )]
position = Vector2( 472, 72 )
scannerID = 3

[node name="ScannerTile4" parent="Board" instance=ExtResource( 1 )]
position = Vector2( 440, 56 )
scannerID = 3

[node name="ScannerTile5" parent="Board" instance=ExtResource( 1 )]
position = Vector2( 472, 56 )
scannerID = 3

[node name="ScannerTile6" parent="Board" instance=ExtResource( 1 )]
position = Vector2( 488, 40 )
scannerID = 3

[node name="Temple" parent="Board" instance=ExtResource( 2 )]
position = Vector2( 472, 88 )

[node name="Player" parent="Board" instance=ExtResource( 10 )]
position = Vector2( 440, 88 )

[node name="TheEyeSprite" parent="Board" instance=ExtResource( 13 )]
position = Vector2( 288, -48 )
frame = 0

[node name="AnimatedSprite" type="AnimatedSprite" parent="Board/TheEyeSprite"]
show_behind_parent = true
position = Vector2( -1, 49 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 13 )
frame = 3
playing = true

[node name="Traps" type="Node2D" parent="Board"]

[node name="AnimatedSprite" parent="Board/Traps" instance=ExtResource( 4 )]
position = Vector2( 392, 0 )
frame = 2

[node name="AnimatedSprite2" parent="Board/Traps" instance=ExtResource( 4 )]
position = Vector2( 536, 0 )
frame = 2

[node name="Timers" type="Node" parent="."]

[node name="CanUndoTimer" type="Timer" parent="Timers"]
wait_time = 0.2

[node name="SpawningCavTimer" type="Timer" parent="Timers"]
wait_time = 2.0

[node name="IncreaseHealth" type="Timer" parent="Timers"]
wait_time = 5.0

[node name="Death" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="Death"]
material = SubResource( 12 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 80.0
margin_top = -56.0
margin_right = 80.0
margin_bottom = -56.0

[node name="DeathScreen" type="Control" parent="Death"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Death/DeathScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 11 )
text = "ARCHI GOT LOST"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Death/DeathScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = 36.0
margin_right = 150.0
margin_bottom = 73.0
rect_min_size = Vector2( 300, 37 )
rect_pivot_offset = Vector2( 150, 18 )
custom_constants/separation = 50
alignment = 1

[node name="Reset" parent="Death/DeathScreen/HBoxContainer" instance=ExtResource( 6 )]
margin_left = 36.0
margin_right = 147.0
margin_bottom = 37.0
text = "RESTART"

[node name="Quit" parent="Death/DeathScreen/HBoxContainer" instance=ExtResource( 6 )]
margin_left = 197.0
margin_right = 264.0
margin_bottom = 37.0
text = "QUIT"

[connection signal="timeout" from="Timers/CanUndoTimer" to="." method="_on_CanUndoTimer_timeout"]
[connection signal="timeout" from="Timers/SpawningCavTimer" to="." method="_on_SpawningCavTimer_timeout"]
[connection signal="timeout" from="Timers/IncreaseHealth" to="." method="_on_IncreaseHealth_timeout"]

[editable path="Board/VoidTilemap"]
